 * Fix: Snippet chooser modal no longer fails on snippet models with UUID primary keys (Sævar Öfjörð Magnússon)
 * Fix: Restored localisation in date/time pickers (David Moore, Thibaud Colas)
 * Fix: Tag input field no longer treats 'б' on Russian keyboards as a comma (Michael Borisov)


2.2.2 (29.08.2018)
~~~~~~~~~~~~~~~~~~

 * Fix: Seek to the beginning of image files when uploading, to restore compatibility with django-storages Google Cloud and Azure backends (Mikalai Radchuk)
 * Fix: Respect next param on login (Loic Teixeira)


2.2.1 (13.08.2018)
~~~~~~~~~~~~~~~~~~

 * Fix: Pin Beautiful Soup to 4.6.0 due to further regressions in formatting empty elements (Matt Westcott)
 * Fix: Prevent AppRegistryNotReady error when wagtail.contrib.sitemaps is in INSTALLED_APPS (Matt Westcott)


2.2 (10.08.2018)
~~~~~~~~~~~~~~~~

 * Added faceted search using the `.facet()` method (Karl Hobley)
 * Added page type filtering and ordering to the Wagtail admin page search (Karl Hobley)
 * Added another valid AudioBoom oEmbed pattern (Bertrand Bordage)
 * Added `annotate_score` support to PostgreSQL search backend (Bertrand Bordage)
 * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
 * JS / CSS media files can now be associated with Draftail feature definitions (Matt Westcott)
 * The `{% slugurl %}` template tag is now site-aware (Samir Shah)
 * Added `file_size` field to documents (Karl Hobley)
 * Added `file_hash` field to images (Karl Hobley)
 * Update documentation (configuring Django for Wagtail) to contain all current settings options (Matt Westcott, LB (Ben Johnston))
 * Added `defer` flag to `PageQuerySet.specific` (Karl Hobley)
 * Snippets can now be deleted from the listing view (LB (Ben Johnston))
 * Increased max length of redirect URL field to 255 (Michael Harrison)
 * Added documentation for new JS/CSS media files association with Draftail feature definitions (Ed Henderson)